# Wifi-Sensor-Dashboard

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  hardware_rtl_bug.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: 1-Requirements and Constraints.md  2- System Design and Module Planning.md  3 - Module Test Report.md
docs/.obsidian/: app.json  appearance.json  bookmarks.json  community-plugins-WorkStuff.json  community-plugins.json  graph-WorkStuff.json  hotkeys.json  types.json  workspace-WorkStuff.json  workspace.json
docs/.obsidian/plugins/callout-manager/: data.json
notes/: Module Test Report.md  Project Idea.md  Project Scope.md  Requirements & Constraints.md  System Design & Module Planning.md
notes/.obsidian/: app-WorkStuff.json  appearance-WorkStuff.json  bookmarks-WorkStuff.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys-WorkStuff.json  templates.json  workspace  workspace.json
notes/Note Taking/: Notes.md  Project Structure.md
report/Template/: IEEE Template.doc
src/: CMakeLists.txt
src/components/drivers/: CMakeLists.txt  GPIO_LED.c
src/components/drivers/nvs_manager/: CMakeLists.txt  nvs_manager.c
src/components/drivers/nvs_manager/include/: nvs_manager.h
src/components/drivers/nvs_manager/test/: CMakeLists.txt  test_nvs_manager.c
src/components/features/web_server/: CMakeLists.txt  web_server.c
src/components/features/web_server/include/: web_server.h
src/main/: CMakeLists.txt  main.c
src/unity-app/: CMakeLists.txt
(+28 files in other folders)
